# rustycpp

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs  compile_list.json  gencodecov.sh  main.cpp  rebuildallprofiles.sh
.github/workflows/: rust.yml
codegen/: AST.rs  ASTNodes.rs  Cargo.toml  ClassRepresentation.rs  mod.rs
codegen/src/: AST.rs  GenASTNodes.rs  lib.rs
deriveMacros/: Cargo.toml
deriveMacros/src/: DeriveCommonAst.rs  RustycppInheritance.rs  deriveCommonAst.rs  lib.rs
src/: Ast.rs  Compiler.rs  Grammars.rs  Lex.rs  ModuleTree.rs  Parse.rs  Preprocessor.rs  Sema.rs  Test.rs  Utils.rs  ast.rs  compiler.rs  filemap.rs  grammars.rs  lex.rs  lexer.rs  main.rs  module_tree.rs  parse.rs  prelexer.rs  preprocessor.rs  test.rs  utils.rs
src/Ast/: Attribute.rs  Common.rs  Decl.rs  NestedNameSpecifier.rs  Tu.rs  Type.rs
src/Grammars/: DefineAst.rs  DefineParser.rs  MacroIntConstantExpressionParser.rs
src/Lex/: Lexer.rs  Token.rs
src/ModuleTree/: DependencyAnnotate.rs  DependencyDfs.rs  DependencyInterpreter.rs  DependencyIterator.rs  DependencyParser.rs  Generate.rs  Structs.rs
src/Parse/: BufferedLexer.rs  Parser.rs
src/Preprocessor/: Driver.rs  Multilexer.rs  Prelexer.rs  Pretoken.rs  Structs.rs
src/Sema/: AstContext.rs  Scope.rs  TypeDict.rs
src/Test/: TestIncluder.rs  TestLexer.rs  TestPreprocessorDefine.rs  TestPreprocessorIf.rs  TestProject.rs  TestSingleFile.rs
src/Utils/: CompilerState.rs  DebugNode.rs  FileMap.rs  FoldingContainer.rs  ModuleHeaderAtomicLexingList.rs  NomLike.rs  StateCompileUnit.rs  StringRef.rs  Structs.rs  UnsafeAllocator.rs
src/ast/: Attribute.rs  Decl.rs  NestedNameSpecifier.rs  Tu.rs  Type.rs  common.rs
src/grammars/: define.lalrpop  defineast.rs  defineparser.rs  generated.rs  macrointconstantexpressionast.g4  macrointconstantexpressionast.rs  macrointconstantexpressionparser.rs  mainCpp.g4  mainCpp.rs
src/lex/: lexer.rs  token.rs
src/lexer/: lexer.rs  token.rs  tokens.rs
src/module_tree/: dependency_annotate.rs  dependency_dfs.rs  dependency_interpreter.rs  dependency_iterator.rs  dependency_parser.rs  generate.rs  structs.rs
src/parse/: bufferedLexer.rs  parse.rs  parser.rs
src/preprocessor/: custommacros.rs  defineparse.rs  driver.rs  macroexpand.rs  macroexpression.rs  multilexer.rs  prelexer.rs  pretoken.rs  structs.rs
src/sema/: scope.rs
src/test/: testProject.rs  testSingleFile.rs  testincluder.rs  testlexer.rs  testpreprocessor.rs  testpreprocessordefine.rs  testpreprocessorif.rs  testprocmacro.rs
src/utils/: antlrlexerwrapper.rs  compilerstate.rs  debugnode.rs  filemap.rs  funcs.rs  lalrpoplexerwrapper.rs  moduleHeaderAtomicLexingList.rs  nomlike.rs  parameters.rs  pretoken.rs  statecompileunit.rs  stringref.rs  structs.rs
test_samples/check_lexer_string_lit_concat/: main.cpp
test_samples/module_tree_showcase/: bar.cpp  classic_normal.cpp  compile_list.json  foo.cpp  foo_interface.cpp  foo_partition.cpp  foo_partition_2.cpp  foo_partition_interface.cpp  foo_partition_interface_2.cpp  hello.h  importable_header.hpp  main.cpp  main2.cpp
test_samples/parser_validator/: compile_list.json  (+2 more)
(+111 files in other folders)
