[package]
name = "rustycpp"
version = "0.1.6"
edition = "2021"
repository = "https://github.com/Destroyerrrocket/rustycpp"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["compiler", "C++"]
categories = ["compilers"]
description = "An attempt to implement the C++20 standard. This is mostly to have fun & learn rust"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
lazy-regex = "2.5.0"
lazy_static = "1.4.0"
logos = "0.12.1"
colored = "2.0.0"
log = "0.4.17"
env_logger = "0.10.0"
test-log = "0.2.11"
multiset = "0.0.5"
chrono = "0.4.24"
json = "0.12.4"
f128 = "0.2.9"
priority-queue = "1.3.1"
threadpool = "1.8.1"
bumpalo = { version="3.12.0", features = ["collections", "allocator_api"] }
deriveMacros = { path = "./deriveMacros" }
function_name = "0.3.0"
enum_dispatch = "0.3.11"
bitflags = "1.3.2"
atomic_enum = "0.2.0"
strum = "0.24.1"
strum_macros = "0.24.3"

[build-dependencies]
enum_dispatch = "0.3.11"


[profile.release]
lto = true
codegen-units = 1

[profile.codecoverage]
inherits = "test"
incremental = false
