[package]
name = "codegen"
description = "A tool to generate tons of boilerplate code"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
